# resaleiq

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
dashboard/: __init__.py  app.py  utils.py
dashboard/pages/: 1_Executive_Summary.py  2_Pricing_Model_Performance.py  3_Auction_Lot_Optimizer.py  4_Segment_Audit.py  5_Experiment_Tracker.py
data/: buyers.parquet  devices.parquet  lot_bids.parquet  lot_items.parquet  lot_model.pkl  lot_model_summary.json  lots.parquet  model_predictions.parquet  phase3_counterfactual.parquet  phase3_predictions.parquet  phase3_summary.parquet  sku_listings.parquet  sku_offers.parquet  skus.parquet
docs/: DASHBOARD_NOTES.md  DEPLOYMENT_PLAN.md  MODEL_CARD.md  MONITORING_SPEC.md  PHASE3_TECHNICAL_NOTES.md  TECHNICAL_WRITEUP.md
migrations/: 001_add_conformal_intervals.sql
scripts/: counterfactual_analysis.py  dev_setup.sh  generate_phase3_charts.py  load_parquet_to_postgres.py  load_phase3_predictions.py  train_all_models.py  train_lot_model.py
src/resaleiq/: __init__.py  config.py
src/resaleiq/data_generation/: __init__.py  buyers.py  devices.py  generate.py  lot_flow.py  market_dynamics.py  predictions.py  sku_flow.py  skus.py
src/resaleiq/db/: __init__.py  loader.py  schema.sql
src/resaleiq/ml/: __init__.py  evaluate.py  features.py  lot_model.py  train.py
src/resaleiq/sql/: 01_segment_mape_audit.sql  02_lot_performance.sql  03_popcorn_dynamics.sql  04_buyer_tier_auction_interaction.sql  README.md  __init__.py  runner.py
tests/: conftest.py  test_dashboard_utils.py  test_end_to_end.py  test_lot_model.py  test_market_dynamics.py  test_ml_models.py  test_reference_layer.py  test_sql_queries.py
